2007-08-01  Michael Snyder  <msnyder@access-company.com>

	* elf.c (bfd_elf_print_symbol): Macro dereferences pointer, so
	pointer must be non-null.

2007-08-01  Tristan Gingold  <gingold@adacore.com>

	* coffcode.h (coff_sort_func_alent): New function.
	(coff_slurp_line_table): Sort line table if not already sorted.

2007-08-01  Jakub Jelinek  <jakub@redhat.com>

	* elf.c (_bfd_elf_map_sections_to_segments): Work around buggy
	GCC 3.4.x warning.

2007-08-01  Alan Modra  <amodra@bigpond.net.au>

	* aoutx.h (swap_ext_reloc_in): Set howto to NULL for unknown
	r_type.
	(swap_std_reloc_in): Likewise.
	(aout_link_input_section_std): Likewise.  Return with an error
	on unexpected relocation type.
	(aout_link_input_section_ext): Likewise.

2007-08-01  Alan Modra  <amodra@bigpond.net.au>

	PR4694
	* aoutx.h (final_link): Write a zero in first word of
	stringtab if no symbols rather than corrupting last byte
	of text/data.

2007-07-31  Jakub Jelinek  <jakub@redhat.com>

	* elf.c (get_program_header_size): Adjacent loadable .note*
	sections need just one PT_NOTE segment.
	(_bfd_elf_map_sections_to_segments): Likewise.

2007-07-30  Michael Snyder  <msnyder@access-company.com>

	* coffgen.c (_bfd_coff_read_internal_relocs): Revert change of
	2007-07-26.  Buffer still in use, can't be freed.

2007-07-27  Michael Snyder  <msnyder@access-company.com>

	* cofflink.c (coff_link_add_symbols): Return if count is zero.

	* coff-i386.c (coff_i386_rtype_to_howto): Off by one error.

	* aoutx.h (slurp_symbol_table): Return if count == 0.

	* coffgen.c (_bfd_coff_read_internal_relocs): Return if count is zero.

	* elf32-i386.c (elf_i386_check_relocs): Check for null pointer.

2007-07-27  H.J. Lu  <hongjiu.lu@intel.com>

	* config.bfd (x86_64-*-mingw*): Don't include x86_64coff_vec.

2007-07-26  Michael Snyder  <msnyder@access-company.com>

	* coff-i386.c (coff_i386_rtype_to_howto): Guard against null.

	* linker.c (bfd_section_already_linked_table_insert): Change 